--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -280,6 +280,7 @@ footer div.ticker-wrap div.ticker {
 footer div.ticker-wrap div.ticker p {
   display: inline-flex;
   align-items: center;
+  font-size: 50px;
 }
 footer section {
   background-color: black;
